Work on UCB active ranker